fix: different layout issues and markdown rendering paddings

--- a/src/layouts/style.css
+++ b/src/layouts/style.css
@@ -63,6 +63,10 @@
   }
 }
 
+article p:last-of-type {
+  margin-bottom: 0;
+}
+
 @layer base {
   body {
     @apply bg-background text-foreground;
